--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
+# Audio Files
+*.wav
+*.mp3
+*.ogg
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+*.zip
+*.gz
